--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.8.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "^3.37.0"
+    "react-native-screens": "^3.37.0",
+    "react-native-toast-message": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +32,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
