--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.8.4",
+    "i18next": "^25.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-reanimated": "^3.15.0",
