--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "18.2.0",
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.18.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
