--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
-    "react-native-toast-message": "^2.3.0"
+    "react-native-svg": "^15.11.2",
+    "react-native-toast-message": "^2.3.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
