--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.18.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
@@ -28,6 +29,7 @@
     "react-native-screens": "^3.37.0",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
+    "text-encoding": "^0.7.0",
     "web3": "^4.16.0"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
