--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
     "test": "jest",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
@@ -18,6 +19,7 @@
     "axios": "^1.8.4",
     "i18next": "^25.0.1",
     "nativewind": "^2.0.11",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
