--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
     "text-encoding": "^0.7.0",
@@ -46,6 +47,7 @@
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
     "@types/react-native-html-to-pdf": "^0.8.3",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
