feat: add package location and create hook use location

--- a/ios/InspectionApp/Info.plist
+++ b/ios/InspectionApp/Info.plist
@@ -48,5 +48,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Precisamos da sua localização para mostrar sua posição no mapa.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Precisamos da sua localização mesmo em segundo plano.</string>
 </dict>
 </plist>
