--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
