--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@rnmapbox/maps": "^10.1.27",
+    "@rnmapbox/maps": "10.1.36",
     "axios": "^1.8.4",
     "i18next": "^25.0.1",
     "nativewind": "^2.0.11",
