feat: add react native vision camera package and create basic camera component

--- a/ios/InspectionApp/Info.plist
+++ b/ios/InspectionApp/Info.plist
@@ -52,5 +52,7 @@
 	<string>Precisamos da sua localização para mostrar sua posição no mapa.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Precisamos da sua localização mesmo em segundo plano.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Precisamos acessar a câmera</string>
 </dict>
 </plist>
