--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-permissions": "^5.4.0",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
@@ -35,6 +36,7 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
+    "react-native-vision-camera": "^4.6.4",
     "text-encoding": "^0.7.0",
     "web3": "^4.16.0"
   },
