--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.0",
     "react-native-get-random-values": "^1.11.0",
@@ -33,6 +34,7 @@
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
+    "react-native-share": "^12.0.9",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
