--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,7 @@ newArchEnabled=false
 hermesEnabled=true
 
 MAPBOX_DOWNLOADS_TOKEN=xxxxxx
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=*****
+MYAPP_UPLOAD_KEY_PASSWORD=*****
