--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^5.4.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "^3.15.0",
+    "react-native-reanimated": "3.14.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
     "react-native-share": "^12.0.9",
