--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "^2.18.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^5.4.0",
     "react-native-portalize": "^1.0.7",
