--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,5 +36,11 @@ target 'InspectionApp' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+    $RNMapboxMaps.post_install(installer)
+    # ... other post install hooks
   end
+end
+
+pre_install do |installer|
+  $RNMapboxMaps.pre_install(installer)
 end
