--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^15.5.1",
     "react-native": "0.74.3",
     "react-native-compressor": "^1.11.0",
+    "react-native-config": "^1.5.5",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.0",
