--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,8 +36,16 @@ target 'Sintropia' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+
+    installer.pods_project.targets.each do |target|
+      if target.name == "React-Core.common-RCTI18nStrings"
+        # https://github.com/facebook/react-native/issues/43610#issuecomment-2017636169                                                                                                                                   
+        target.remove_from_project
+      end
+    end
+    
     $RNMapboxMaps.post_install(installer)
-    # ... other post install hooks
+    # ... other post install hooks  
   end
 end
 
