--- a/ios/Sintropia/Info.plist
+++ b/ios/Sintropia/Info.plist
@@ -26,14 +26,11 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -49,10 +46,26 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Precisamos da sua localização para mostrar sua posição no mapa.</string>
+	<string>Show current location on map.
+Show current location on map.
+Show current location on map.
+Show current location on map.
+ShowShow current location on map.
+ current location on map.
+</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is used to help your registration process and to perform inspections.
+Your location is used to help your registration process and to perform inspections.
+Your lYour location is used to help your registration process and to perform inspections.
+ocation is used to help your registration process and to perform inspections.
+</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Precisamos da sua localização mesmo em segundo plano.</string>
+	<string>Your location is used to help your registration process and to perform inspections.
+Your location is used to help your registration process and to perform inspections.
+</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Precisamos acessar a câmera</string>
+	<string>Your camera is used to take one photo at registration and to perform inspections.
+Your camera is used to take one photo at registration and to perform inspections.
+</string>
 </dict>
 </plist>
