--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rnmapbox/maps": "10.1.36",
     "@turf/turf": "^7.2.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "i18next": "^25.0.1",
     "nativewind": "^2.0.11",
     "patch-package": "^8.0.0",
